<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ This file is part of krei. It is subject to the license terms in the LICENSE file found in the top-level
  ~ directory of this distribution and at http://creativecommons.org/publicdomain/zero/1.0/. No part of krei,
  ~ including this file, may be copied, modified, propagated, or distributed except according to the terms contained
  ~ in the LICENSE file.
  -->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- ordering follows https://maven.apache.org/developers/conventions/code.html#POM_Code_Convention -->

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!--                               COORDINATES                               -->
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!-- https://maven.apache.org/pom.html#Maven_Coordinates -->
    <groupId>wtf.metio.krei</groupId>
    <artifactId>krei</artifactId>
    <version>${revision}</version>
    <packaging>jar</packaging>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!--                               INFORMATIONS                              -->
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!-- https://maven.apache.org/pom.html#More_Project_Information -->
    <name>krei</name>
    <description>krei: create new projects</description>
    <url>https://krei.metio.wtf/</url>
    <inceptionYear>2020</inceptionYear>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!--                                    SCM                                  -->
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!-- https://maven.apache.org/pom.html#SCM -->
    <scm>
        <connection>scm:git:git@codeberg.org:metio.wtf/krei.git</connection>
        <developerConnection>scm:git:git@codeberg.org:metio.wtf/krei.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://codeberg.org/metio.wtf/krei</url>
    </scm>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!--                             ISSUE MANAGEMENT                            -->
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!-- https://maven.apache.org/pom.html#Issue_Management -->
    <issueManagement>
        <system>Codeberg</system>
        <url>https://codeberg.org/metio.wtf/krei/issues</url>
    </issueManagement>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!--                                PROPERTIES                               -->
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!-- https://maven.apache.org/pom.html#Properties -->
    <properties>
        <revision>0.0.0-SNAPSHOT</revision>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.junit5>5.6.2</version.junit5>
        <version.immutables>2.8.8</version.immutables>
        <version.jackson>2.10.0</version.jackson>
        <version.checksum-m-p>1.8</version.checksum-m-p>

        <project.build.outputTimestamp>2020</project.build.outputTimestamp>
    </properties>

    <repositories>
        <repository>
            <id>maven-build-process</id>
            <name>GitHub maven-build-process Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/metio/maven-build-process</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>hcf4j</id>
            <name>GitHub hcf4j Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/metio/hcf4j</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!--                          DISTRIBUTION MANAGEMENT                        -->
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!-- https://maven.apache.org/pom.html#Distribution_Management -->
    <distributionManagement>
        <site>
            <id>metio</id>
            <name>official website</name>
            <url>https://krei.projects.metio.wtf</url>
        </site>
        <repository>
            <id>github</id>
            <name>GitHub krei Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/metio/krei</url>
        </repository>
    </distributionManagement>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!--                               DEPENDENCIES                              -->
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!-- https://maven.apache.org/pom.html#Dependencies -->
    <dependencies>
        <dependency>
            <groupId>org.immutables</groupId>
            <artifactId>value</artifactId>
            <version>${version.immutables}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>wtf.metio.hcf4j</groupId>
            <artifactId>hcf4j-api</artifactId>
            <version>2020.05.24-181034</version>
        </dependency>
        <dependency>
            <groupId>wtf.metio.hcf4j</groupId>
            <artifactId>hcf4j-okhttp3</artifactId>
            <version>2020.05.24-181034</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${version.jackson}</version>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk15on</artifactId>
            <version>1.65</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${version.junit5}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${version.junit5}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${version.junit5}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!--                                   BUILD                                 -->
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <!-- https://maven.apache.org/pom.html#Build -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>14</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.immutables</groupId>
                            <artifactId>value-processor</artifactId>
                            <version>${version.immutables}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
                <configuration>
                    <argLine>
                        --enable-preview
                        --add-opens wtf.metio.krei/wtf.metio.krei.construct.metio=ALL-UNNAMED
                        --add-opens wtf.metio.krei/wtf.metio.krei.construct.community=ALL-UNNAMED
                        --add-opens wtf.metio.krei/wtf.metio.krei.model=ALL-UNNAMED
                        --add-opens wtf.metio.krei/wtf.metio.krei.template=ALL-UNNAMED
                        --add-opens wtf.metio.krei/wtf.metio.krei.unit=ALL-UNNAMED
                        --add-opens wtf.metio.krei/wtf.metio.krei.usecase=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.nicoulaj.maven.plugins</groupId>
                <artifactId>checksum-maven-plugin</artifactId>
                <version>${version.checksum-m-p}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>artifacts</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <algorithms>
                        <algorithm>SHA-512</algorithm>
                    </algorithms>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
